tests/sema/negative/field_type_mismatch.nv
struct Token {
    kind: int;
    lexeme: str;
}

fn main() : void {
    let t : Token = Token { kind: "fn", lexeme: "fn" };
    return;
}
